--- a/ClientApp/src/app/components/tblBuilder/tableBuilder.component.html
+++ b/ClientApp/src/app/components/tblBuilder/tableBuilder.component.html
@@ -2,9 +2,9 @@
 <div *ngIf="currentLanguage=='ru';else uzDiv">
   <div class="container" id="con" *ngIf="isNoResult;else nofacultyRu">
     <div class="table100">
-      <div *ngFor="let d of dict | keyvalue">
-        <p class="text-center u-name-container">
-          <a class="u-name" href="UniversityList/University/{{d.key}}">{{d.value[0].universityNameRu}} </a>
+      <div *ngFor="let u of universities">
+        <p class="text-center u-name-container" [ngStyle]="{'display':style.uNameDisplay  }">
+          <a class="u-name" href="UniversityList/University/{{u.id}}">{{u.nameRu}} </a>
         </p>
         <table class="exo2">
           <thead>
@@ -12,37 +12,48 @@
               <th>{{'N'}}</th>
               <th>{{tableHeader.code}}</th>
               <th>{{tableHeader.direction}}</th>
-              <th>{{tableHeader.plan}}</th>
-              <th>{{tableHeader.pass}}</th>
+              <th class="cursor-pointer" (click)="orderByCount()">
+                {{tableHeader.plan}}
+                <span [ngStyle]="{'display':style.subjectDisplay}" class="{{arrowByCountClass}}"></span>
+              </th>
+              <th class="cursor-pointer" (click)="orderByPoint()">
+                {{tableHeader.pass}}
+                <span [ngStyle]="{'display':style.subjectDisplay}" class="{{arrowByPointClass}}"></span>
+              </th>
               <th>{{tableHeader.accept}}</th>
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let fac of d.value;let i=index">
-              <td>{{i+1}}</td>
-              <td>{{fac.code}}</td>
-              <td style="text-align:left">{{fac.facultyNameRu}}</td>
-              <td class="number">
-                <span>
-                  {{fac.grant}} /
-                </span>
-                <span>
-                  {{fac.contract}}
-                </span>
-              </td>
-              <td class="number">
-                <span>
-                  {{fac.grantPass}} /
-                </span>
-                <span>
-                  {{fac.contractPass}}
-                </span>
-              </td>
+            <ng-container *ngFor="let fac of u.faculties;let i=index">
+              <tr [ngStyle]="{'display':style.subjectDisplay}">
+                <td colspan="6" id="subj-td" class="extra-info">Предметы: {{createSubject(fac.subject)}}</td>
+              </tr>
+              <tr>
+                <td>{{i+1}}</td>
+                <td>{{fac.code}}</td>
+                <td style="text-align:left">{{fac.facultyNameRu}}</td>
+                <td class="number">
+                  <span [className]="grantCount ? 'grand-light' :''">
+                    {{fac.grant}} /
+                  </span>
+                  <span [className]="contractCount ? 'contract-light' :''">
+                    {{fac.contract}}
+                  </span>
+                </td>
+                <td class="number">
+                  <span [className]="grantPoint ? 'grand-light' :''">
+                    {{fac.grantPass}} /
+                  </span>
+                  <span [className]="contractPoint ? 'contract-light' :''">
+                    {{fac.contractPass}}
+                  </span>
+                </td>
 
-              <td class="number">{{fac.asFirst}}/{{fac.asSecond}}/{{fac.asThird}}</td>
-            </tr>
-          </tbody>
+                <td class="number">{{fac.asFirst}}/{{fac.asSecond}}/{{fac.asThird}}</td>
+              </tr>
+            </ng-container>
            
+          </tbody>         
         </table>
       </div>
     </div>
@@ -54,9 +65,9 @@
 <ng-template #uzDiv>
   <div class="container" id="con" *ngIf="isNoResult;else nofacultyUz">
     <div class="table100">
-      <div *ngFor="let d of dict | keyvalue">
-        <p class="text-center u-name-container">
-          <a class="u-name" href="UniversityList/University/{{d.key}}">{{d.value[0].universityNameUz}} </a>
+      <div *ngFor="let u of universities">
+        <p class="text-center u-name-container" [ngStyle]="{'display':style.uNameDisplay  }">
+          <a class="u-name" href="UniversityList/University/{{u.id}}">{{u.nameUz}} </a>
         </p>
         <table class="exo2">
           <thead>
@@ -64,37 +75,48 @@
               <th>{{'N'}}</th>
               <th>{{tableHeader.code}}</th>
               <th>{{tableHeader.direction}}</th>
-              <th>{{tableHeader.plan}}</th>
-              <th>{{tableHeader.pass}}</th>
+              <th class="cursor-pointer" (click)="orderByCount()">
+                {{tableHeader.plan}}
+                <span class="{{arrowByCountClass}}"></span>
+              </th>
+              <th class="cursor-pointer" (click)="orderByPoint()">
+                {{tableHeader.pass}}
+                <span class="{{arrowByPointClass}}"></span>
+              </th>
               <th>{{tableHeader.accept}}</th>
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let fac of d.value;let i=index">
-              <td>{{i+1}}</td>
-              <td>{{fac.code}}</td>
-              <td style="text-align:left">{{fac.facultyNameUz}}</td>
-              <td class="number">
-                <span>
-                  {{fac.grant}} /
-                </span>
-                <span>
-                  {{fac.contract}}
-                </span>
-              </td>
-              <td class="number">
-                <span>
-                  {{fac.grantPass}} /
-                </span>
-                <span>
-                  {{fac.contractPass}}
-                </span>
-              </td>
+            <ng-container *ngFor="let fac of u.faculties;let i=index">
+              <tr [ngStyle]="{'display':style.subjectDisplay}">
+                <td colspan="6" id="subj-td" class="extra-info">Предметы: {{createSubject(fac.subject)}}</td>
+              </tr>
+              <tr>
+                <td>{{i+1}}</td>
+                <td>{{fac.code}}</td>
+                <td style="text-align:left">{{fac.facultyNameUz}}</td>
+                <td class="number">
+                  <span [className]="grantCount ? 'grand-light' :''">
+                    {{fac.grant}} /
+                  </span>
+                  <span [className]="contractCount ? 'contract-light' :''">
+                    {{fac.contract}}
+                  </span>
+                </td>
+                <td class="number">
+                  <span [className]="grantPoint ? 'grand-light' :''">
+                    {{fac.grantPass}} /
+                  </span>
+                  <span [className]="contractPoint ? 'contract-light' :''">
+                    {{fac.contractPass}}
+                  </span>
+                </td>
 
-              <td class="number">{{fac.asFirst}}/{{fac.asSecond}}/{{fac.asThird}}</td>
-            </tr>
+                <td class="number">{{fac.asFirst}}/{{fac.asSecond}}/{{fac.asThird}}</td>
+              </tr>
+            </ng-container>
+
           </tbody>
-
         </table>
       </div>
     </div>
