--- a/ClientApp/src/app/components/tblBuilder/tableBuilder.component.html
+++ b/ClientApp/src/app/components/tblBuilder/tableBuilder.component.html
@@ -49,7 +49,7 @@
                   </span>
                 </td>
 
-                <td class="number">{{fac.asFirst}}/{{fac.asSecond}}/{{fac.asThird}}</td>
+                <td class="number">{{fac.totalApply}}</td>
               </tr>
             </ng-container>
            
@@ -111,8 +111,7 @@
                     {{fac.contractPass}}
                   </span>
                 </td>
-
-                <td class="number">{{fac.asFirst}}/{{fac.asSecond}}/{{fac.asThird}}</td>
+                <td class="number">{{fac.totalApply}}</td>
               </tr>
             </ng-container>
 
