--- a/UniInfo.Web/Views/Shared/_Layout.cshtml
+++ b/UniInfo.Web/Views/Shared/_Layout.cshtml
@@ -61,8 +61,8 @@
                               asp-action="SetLanguage" method="post" class="form-inline" role="form">
 
                             <div class="d-flex flex-row flex-wrap">
-                                <input class="item-btn item-btn-sub item-text cursor-poiter input-lang @uz" id="uz_input_lang_id" type="submit" name="culture" asp-for="@Localizer["LangUz"].Value" />
-                                <input class="item-btn item-btn-sub item-text cursor-poiter input-lang @ru" id="ru_input_lang_id" type="submit" name="culture" asp-for="@Localizer["LangRu"].Value" />
+                                <input class="item-btn item-btn-sub item-text cursor-pointer input-lang @uz" id="uz_input_lang_id" type="submit" name="culture" asp-for="@Localizer["LangUz"].Value" />
+                                <input class="item-btn item-btn-sub item-text cursor-pointer input-lang @ru" id="ru_input_lang_id" type="submit" name="culture" asp-for="@Localizer["LangRu"].Value" />
                             </div>
                         </form>
                     </nav>
