quiz angular view added

--- a/UniInfo.Web/Views/Shared/_Layout.cshtml
+++ b/UniInfo.Web/Views/Shared/_Layout.cshtml
@@ -53,6 +53,9 @@
                                 <li class="nav-item nav-line">
                                     <a class="nav-link" asp-action="Index" asp-controller="UniversityList">@Localizer["AllUniversity"]</a>
                                 </li>
+                                <li class="nav-item nav-line">
+                                    <a class="nav-link" asp-action="Index" asp-controller="Quiz">@Localizer["Quiz"]</a>
+                                </li>
                             </ul>
                         </div>
 
