--- a/ClientApp/src/app/components/quiz/quizView.component.html
+++ b/ClientApp/src/app/components/quiz/quizView.component.html
@@ -1,28 +1,108 @@
 
+<style>
+  .quiz-container {
+    border: 2px solid #00f3ff;
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: 10px;
+  }
+  .question-number {
+    font-size: 20px;
+    color: #00f3ff;
+    float: left;
+    margin: 0 5px;  
+  }
+  .question{
+    font-size:18px;
+  }
+  .tab-placement{
+    margin:0 2rem;
+  }
 
-<div *ngFor="let q of quizzes;let i=index" style="font-family:sans-serif" class="container">
-  <div class="question text-center">
-    <span>{{i+1}}</span><p [innerHtml]="q?.question" class="d-inline"></p>
+  .question-active {
+    color: #000000;
+    background-color: #17a2b8;
+    border-color: #17a2b8 #17a2b8 #17a2b8;
+  }
+  .nav-tabs .nav-link.active {
+    color: black;
+    background-color: #17a2b8;
+    border-color: #17a2b8 #17a2b8 #17a2b8;
+  }
+  .nav-link{
+    color:white;
+  }
+</style>
+
+<div class="container">
+
+
+  <nav>
+    <div class="nav nav-tabs tab-placement" id="nav-tab" role="tablist">
+      <a class="nav-item nav-link active" id="nav-first-tab" data-toggle="tab" href="#nav-first" role="tab" aria-controls="nav-first" aria-selected="true">{{repo.currentSubject.firstSubject.ruVersion}}</a>
+      <a class="nav-item nav-link" id="nav-second-tab" data-toggle="tab" href="#nav-second" role="tab" aria-controls="nav-second" aria-selected="false">{{repo.currentSubject.secondSubject.ruVersion}}</a>
+    </div>
+  </nav>
+  <div class="tab-content" id="nav-tabContent">
+    <div class="tab-pane fade show active" id="nav-first" role="tabpanel" aria-labelledby="nav-home-tab">
+      <div *ngFor="let q of firstSubjectQuestions;let i=index" style="font-family:sans-serif" class="quiz-container">
+        <div class="question text-center">
+          <span class="question-number">{{i+1}})</span><p [innerHtml]="q.question | safe" class="d-inline"></p>
+        </div>
+        <div class="mt-5 mb-5"></div>
+
+        <div class="d-flex flex-column" style="margin:0 auto;">
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="{{q.questionUniqueId}}" />
+            <label [innerHtml]="q.firstAnswer | safe"></label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="{{q.questionUniqueId}}" />
+            <label [innerHtml]="q.secondAnswer | safe"></label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="{{q.questionUniqueId}}" />
+            <label [innerHtml]="q?.thirdAnswer | safe"></label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="{{q.questionUniqueId}}" />
+            <label [innerHtml]="q.fourthAnswer | safe"></label>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="tab-pane fade" id="nav-second" role="tabpanel" aria-labelledby="nav-profile-tab">
+      <div class="tab-pane fade show active" id="nav-first" role="tabpanel" aria-labelledby="nav-home-tab">
+        <div *ngFor="let q of secondSubjectQuestions;let i=index" style="font-family:sans-serif" class="quiz-container">
+          <div class="question text-center">
+            <span class="question-number">{{i+1}})</span><p [innerHtml]="q.question | safe" class="d-inline"></p>
+          </div>
+          <div class="mt-5 mb-5"></div>
+
+          <div class="d-flex flex-column" style="margin:0 auto;">
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="{{q.questionUniqueId}}" />
+              <label [innerHtml]="q.firstAnswer | safe"></label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="{{q.questionUniqueId}}" />
+              <label [innerHtml]="q.secondAnswer | safe"></label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="{{q.questionUniqueId}}" />
+              <label [innerHtml]="q?.thirdAnswer | safe"></label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="{{q.questionUniqueId}}" />
+              <label [innerHtml]="q.fourthAnswer | safe"></label>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
   </div>
-  <div class="mt-5 mb-5"></div>
-
-  <div class="d-flex flex-column">
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="{{q.questionUniqueId}}" />
-      <label  [innerHtml]="q?.firstAnswer"></label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="{{q.questionUniqueId}}"/>
-      <label [innerHtml]="q?.secondAnswer"></label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="{{q.questionUniqueId}}" />
-      <label [innerHtml]="q?.thirdAnswer"></label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="{{q.questionUniqueId}}"/>
-      <label [innerHtml]="q?.fourthAnswer"></label>
-    </div>
-  </div>
-
+ 
 </div>
