--- a/ClientApp/src/app/components/quiz/quizView.component.html
+++ b/ClientApp/src/app/components/quiz/quizView.component.html
@@ -139,10 +139,10 @@
       </tr>
       <tr>
         <td>
-          {{result?.firstSubjectRightAnswersCount*3.1}}
+          {{result?.firstPoint}}
         </td>
         <td>
-          {{result?.secondSubjectRightAnswersCount*3.1}}
+          {{result?.secondPoint}}
         </td>
       </tr>
       <tr>
