--- a/ClientApp/src/app/components/quiz/quizzes.component.html
+++ b/ClientApp/src/app/components/quiz/quizzes.component.html
@@ -11,7 +11,7 @@
     }
 </style>
 
-<div *ngIf="currentLanguage=='ru';else uzDiv" [class.d-none]="canBuild">
+<div *ngIf="currentLanguage=='ru';else uzDiv" [class.d-none]="canBuildQuiz">
   <div class="inner-container">
     <div class="d-flex flex-wrap flex-row justify-content-md-center">
       <div class="item-text">
@@ -120,9 +120,39 @@
 </ng-template>
 
 <div class="quiz-container">
-  <quiz-view *ngIf="canBuild" (isQuizEndedOutput)="getStatus($event)" (qResultOutput)="getQuizResult($event)"></quiz-view>
-  <div class="qv-result"  [class.d-none]="!isQuizEnded">
+  <quiz-view *ngIf="canBuildQuiz" (isQuizEndedOutput)="getStatus($event)" (qResultOutput)="getQuizResult($event)"></quiz-view>
+  <div class="qv-result" [class.d-none]="!isQuizEnded">
     <button class="btn btn-info color-black d-block" (click)="retry()">Еще раз</button>
     <button class="btn btn-info color-black d-block" (click)="getUniversities()">Посмотреть в какие вузы мог бы поступить</button>
   </div>
+  <div [class.d-none]="!canBuildTable">
+    <div class="d-flex flex-wrap flex-row justify-content-md-center">
+      <div>
+        <div class="arr-container">
+          <div>
+            <button [className]="isThisEducationType(e.code) ? 'btn btn-info color-black':'item-btn item-btn-sub item-text cursor-pointer'" *ngFor="let e of educationTypes" (click)="selectEducationType(e)">
+              {{e?.ruVersion|| 'Loading'}}
+            </button>
+          </div>
+          <p>Тип</p>
+        </div>
+      </div>
+      <div>
+        <div class="arr-container">
+          <div>
+            <button id="{{l.code}}" [className]="isThisLanguage(l.code) ? 'btn btn-info color-black':'item-btn item-btn-sub item-text cursor-pointer'"
+                    class="btn btn-primary" *ngFor="let l of languages" (click)="selectLanguage2(l)">
+              {{l?.ruVersion|| 'Loading'}}
+            </button>
+          </div>
+          <p>Язык</p>
+        </div>
+      </div>
+    </div>
+    <table-builder></table-builder>
+    <div [class.d-none]="repo.allUniversities.length==0">
+      <p>THERE ARE ALL DEAD</p>
+    </div>
+  </div>
+  
 </div>
