--- a/ClientApp/src/app/components/quiz/quizView.component.html
+++ b/ClientApp/src/app/components/quiz/quizView.component.html
@@ -114,7 +114,7 @@
 
     </div>
   </div>
-  <div class="text-center">
+  <div class="text-center mt-5">
     <button class="btn btn-success" (click)="finishQuiz()">
       Завершить
     </button>
