--- a/ClientApp/src/app/components/quiz/quizzes.component.html
+++ b/ClientApp/src/app/components/quiz/quizzes.component.html
@@ -9,6 +9,14 @@
     .qv-result button {
       margin: 15px auto;
     }
+
+  .img-bg {
+    width: 100% !important;
+    background-size: cover;
+    height: 300px;
+    background-image: url(assets/noData.jpg);
+  }
+
 </style>
 
 <div *ngIf="currentLanguage=='ru';else uzDiv" [class.d-none]="canBuildQuiz">
@@ -150,9 +158,11 @@
       </div>
     </div>
     <table-builder></table-builder>
-    <div [class.d-none]="repo.allUniversities.length==0">
-      <p>THERE ARE ALL DEAD</p>
+
+  </div>
+  <div [class.d-none]="!noData">
+    <div class="img-bg" style="height:500px">
+      <p></p>
     </div>
   </div>
-  
 </div>
